--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -92,10 +92,12 @@ header a {
   border-radius: 5px;
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
- /* left: 50%;
-  transform: translateX(-50%);*/
-  margin-left: 405px;
+  left: 50%;
+
+  /*transform: rotateX(-50px) translateX(-5%, -5%);*/
+   transform: translate(-50%, -50%);
+
+/* margin-left: 405px;*/
 }
 
 /*-----------------------------------
@@ -246,6 +248,9 @@ footer a, small {
   display: block;
 }
 
+footer img {
+  width: 80%;
+}
 #twitter {
   float: left;
   position: absolute;
