--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -1,3 +1,4 @@
+
 /******************************************
 /* SETUP
 /*******************************************/
@@ -5,17 +6,12 @@
   box-sizing: border-box; 
 }
 
-
 /******************************************
 /* BASE STYLES
 /*******************************************/
 
 a {
   text-decoration: none;
-}
-
-#benefits p, #quote p {
-  line-height: 140%;
 }
 
 #container {
@@ -26,185 +22,207 @@ body {
   background-color: black;
 }
 
-.color-white {
-  color: white;
-}
+
 /******************************************
 /* LAYOUT
 /*******************************************/
 
+/* Center the container */
 #container {
   width: 960px;
-  margin: 0 auto;
+  margin: auto;
 }
 
-.top {
-  height: 380px;
+div#main {
+  background:#f0efef;
+  padding-bottom: 120px;
 }
 
-.bottom {
+header, aside#button {
+  height: 100px;
+}
+
+.main-column {
+  width: 640px;
+  margin-left: 60px;
+  margin-right: 20px;
+  display: inline-block;
+  float: left;
+}
+
+#sidebar {
+  width: 240px;
+  height: 1400px;
+  display: inline-block;
+  margin-bottom: 60px;
+  padding-right:60px;
+}
+
+#main #column-1, #sidebar {
+  margin-top: 60px;
+ }
+
+footer {
   height: 250px;
 }
-
-aside {
-  height: 80px;
-}
-
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
+/* ---------- HEADER --------------
+-----------------------------------
+-----------------------------------*/
 
-/*-----------------------------------
-
--------------  Header ---------------
-
--------------------------------------*/
 header {
-  background-image: url(../images/header_bg.jpg);
-  background-position: center;
+  background:#033048;
   position: relative;
 }
 
-header h1{
+header div.logo {
+  color: white;
   font-weight: 800;
-  font-size: 24px;
-  position: absolute;
-  top: 5%;
-  padding-left: 80px;
-}
-
-header h2 {
-  font-weight: 600;
-  font-size: 24px;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-header a {
-  font-weight: 800;
-  font-size: 14px;
-  background-color: #f9e42e;
-  padding: 10px 35px;
-  border-radius: 5px;
+  font-size: 36px;
   position: absolute;
   top: 50%;
-  left: 50%;
-
-  /*transform: rotateX(-50px) translateX(-5%, -5%);*/
-   transform: translate(-50%, -50%);
-
-/* margin-left: 405px;*/
+  transform: translateY(-50%);
+  padding-left: 60px;
 }
 
-/*-----------------------------------
-
--------------  Benefits -------------
-
--------------------------------------*/
-
-#benefits {
-  background-color: #f0efef;
-  position: relative;
-}
-
-#benefits h3 {
-  font-weight: 600;
-  font-size: 20px;
-  color:#033048;
-  padding-left: 80px;
+header ul {
   position: absolute;
-  top: 10%;
+  top: 50%;
+  transform: translateY(-50%);
+  padding-right: 60px;
+  margin-left: 445px;
 }
 
-#benefits p, li{
-  font-weight: 300;
-  font-size: 13px;
-  color: #606161;
-}
-
-#benefits p {
-  position: absolute;
-  top: 20%;
-  padding-left: 85px;
-} 
-
-#benefits ul {
-  padding-left: 50px;
-  list-style-type: disc;
-  position: absolute;
-  top: 40%;
-}
-
-#benefits li {
-  margin-left: 100px;
-  margin-bottom: 20px;
-
-}
-
-
-/*-----------------------------------
-
--------------  Quote ----------------
-
--------------------------------------*/
-
-#quote {
-  background-image: url(../images/testimonial_bg.jpg);
-  text-align: center;
-  position: relative;
-}
-
-blockquote p {
-  font-weight: 300;
-  font-size: 18px;
-  font-style: italic;
-  letter-spacing: .8px;
-  color: #606161;
-  quotes: "“" "”" "‘" "’"; 
-}
-
-blockquote p:before {
-  content: open-quote;
-}
-
-blockquote p:after {
-  content: close-quote;
-}
-
-blockquote cite {
+header ul li {
   display: inline-block;
+}
+
+header li a {
+  color: #f9e42e;
   font-weight: 600;
-  font-size: 18px;
-  margin-top: 10px;
+  font-size: 24px;
+  /*transition: 1s all;*/
+  padding-left: 15px;
 }
 
-blockquote {
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translateX(-50%);
+.hover:hover {
+  color: green;
+  /*font-size: 40px;*/
 }
 
-blockquote cite span {
+
+/* ---------- MAIN --------------
+-----------------------------------
+-----------------------------------*/
+#main  section img {
+  display: block;
+  width: 640px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#main h1 {
+  font-weight: 600;
+  font-size:38px;/* intentionally different than design spec */
+  color: #033048;
+  line-height: 120%;
+ }
+
+#main .text {
+  font-weight: 300;
+  font-size: 24px;
   color: #606161;
+  line-height: 130%;
+ }
+
+#main .read-more {
+  font-weight: 600;
+  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  float: right;
+  color: #033048
+ }
+
+#column-2 {
+  margin-top: 30px;
+ }
+
+#column-1, #column-2 {
+  border-bottom: 1px solid #606161;
 }
 
-/*-----------------------------------
+.text::first-letter {
+  font-weight: 600;
+  float: left;
+  font-size: 75px;
+  line-height: 60px;
+  padding-top: 10px;
+  padding-right: 8px;
+  padding-left: 3px;
+}
 
--------------  Aside  ---------------
+  
 
--------------------------------------*/
+ /* ---------- SIDE BAR --------------
+-----------------------------------
+-----------------------------------*/
 
-aside {
+#sidebar #ad-unit img {
+  display: block;
+  width: 180px;
+}
+
+#sidebar {
+  color: #033048;
+}
+
+#sidebar h3 {
+  font-weight: 800;
+  font-size: 26px;/* intentionally different than design spec */
+  letter-spacing:.1px;
+}
+
+#sidebar li {
+  font-weight: 300;
+  font-size: 20px;/* intentionally different than design spec */
+  padding-left: 5px;
+  line-height: 120%;
+}
+
+.sidebar-content {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.sidebar-content #about-relaxr {
+  font-weight: 300;
+  font-size: 18px; /* intentionally different than design spec */
+  line-height: 110%;
+}
+
+.sidebar-content #learn-more {
+  font-weight: 600;
+  font-size: 22px;
+}
+
+
+/* ---------- ASIDE -BUTTON --------------
+-----------------------------------
+-----------------------------------*/
+
+aside#button {
+  clear: both;
   background-color: #f9e42e;
   position: relative;
 }
 
-aside a {
+aside#button a {
+  color: white;
   background-color: #033048;
   padding: 10px 35px;
   font-weight: 800;
@@ -212,37 +230,28 @@ aside a {
   border-radius: 5px;
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
   left: 50%;
   transform: translate(-50%, -50%);
-  /*margin-left: 405px;*/
-  
 }
 
-/*-----------------------------------
 
--------------  Footer ---------------
-
--------------------------------------*/
+/* ---------- FOOTER --------------
+-----------------------------------
+-----------------------------------*/
 
 footer {
   background-color: #121212;
   position: relative;
 }
 
-footer h4 {
+footer div.logo {
   font-weight: 800;
-  font-size: 24px;
+  font-size: 36px;
   color: #f9e42e;
   position: absolute;
   top: 20%;
   left: 50%;
   transform: translateX(-50%);
-}
-
-footer small.color-white {
-  font-weight: 600;
-  font-size: 9px;
 }
 
 footer a, small {
@@ -255,23 +264,28 @@ footer img {
 #twitter {
   float: left;
   position: absolute;
-  top: 106px;
+  top: 130px;
   padding-left: 435px;
 }
 
 #facebook {
   position: absolute;
-  top: 106px;
+  top: 130px;
   padding-left: 503px;
 }
 
 small {
- /* clear: both;*/
+  font-weight: 600;
+  font-size: 9px;
+  color: white;
   position: absolute;
-  bottom: 20%;
+  bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
 }
+
+
+
 
 
 
